--- a/src/EntityFramework.Relational/EntityFramework.Relational.csproj
+++ b/src/EntityFramework.Relational/EntityFramework.Relational.csproj
@@ -70,11 +70,15 @@
     <Compile Include="Metadata\RelationalPropertyExtensions.cs" />
     <Compile Include="Migrations\Infrastructure\ModelDifferContext.cs" />
     <Compile Include="Query\CommandBuilderFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\CompositePredicateExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\ICompositePredicateExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\IIncludeExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\IMaterializerFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\IncludeExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\ISqlTranslatingExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\RelationalProjectionExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\RelationalEntityQueryableExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\SqlTranslatingExpressionVisitorFactory.cs" />
     <Compile Include="Query\ICommandBuilderFactory.cs" />
     <Compile Include="Query\Internal\RelationalExpressionPrinter.cs" />
     <Compile Include="Query\RelationalQueryModelVisitorFactory.cs" />
