--- a/src/EntityFramework.Relational/EntityFramework.Relational.csproj
+++ b/src/EntityFramework.Relational/EntityFramework.Relational.csproj
@@ -75,15 +75,18 @@
     <Compile Include="Query\ExpressionVisitors\IIncludeExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\IMaterializerFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\IncludeExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\IQueryFlatteningExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\IShapedQueryFindingExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\ISqlTranslatingExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\QueryFlatteningExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\RelationalProjectionExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\RelationalEntityQueryableExpressionVisitorFactory.cs" />
+    <Compile Include="Query\ExpressionVisitors\ShapedQueryFindingExpressionVisitorFactory.cs" />
     <Compile Include="Query\ExpressionVisitors\SqlTranslatingExpressionVisitorFactory.cs" />
     <Compile Include="Query\ICommandBuilderFactory.cs" />
     <Compile Include="Query\Internal\RelationalExpressionPrinter.cs" />
     <Compile Include="Query\RelationalQueryModelVisitorFactory.cs" />
     <Compile Include="Query\RelationalQueryCompilationContextFactory.cs" />
-    <Compile Include="Query\RelationalQueryCompilationContextServices.cs" />
     <Compile Include="Query\Sql\ISqlQueryGeneratorFactory.cs" />
     <Compile Include="RelationalReferenceReferenceBuilderExtensions.cs" />
     <Compile Include="Migrations\Builders\ColumnsBuilder.cs" />
